Begiinings of the home page

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,8 +1,7 @@
-  {% include styleguide/head.html %}
+  {% include header.html %}
 
   <body>
 
-    {% include styleguide/side-nav.html %}
 
     <section class="main">
       <div class="page-header">
@@ -13,12 +12,6 @@
         {{ content }}
       </article>
     </section>
-
-    <script>
-      document.getElementById("open-nav").addEventListener("click", function () {
-        document.body.classList.toggle("nav-open");
-      });
-    </script>
 
   </body>
 </html>
