--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,8 +1,7 @@
-	{% include styleguide/head.html %}
+	{% include header.html %}
 
 	<body>
 
-		{% include styleguide/side-nav.html %}
 
 		<section class="main">
 			<div class="page-header">
