--- a/_sass/_typography.scss
+++ b/_sass/_typography.scss
@@ -1,10 +1,10 @@
 ::-moz-selection {
-	background: $celestial-blue;
+	// background: $celestial-blue;
 	color: white;
 }
 
 ::selection {
-	background: $celestial-blue;
+	// background: $celestial-blue;
 	color: white;
 }
 
@@ -46,7 +46,7 @@ p, ul, ol, table, blockquote {
 
 /* Let's make sure all's aligned */
 hr, .hr {
-  border: 1px solid $border-color;
+  // border: 1px solid $border-color;
   margin: -1px 0 2rem;
 }
 b, i, strong, em, small, code {
