--- a/_includes/header.html
+++ b/_includes/header.html
@@ -11,6 +11,15 @@
     {% endcapture %}
     {{ include_to_scssify | scssify }}
   </style>
+  {% if page.critical %}
+   {% capture critical %}
+    {% include critical/{{ page.critical }} %}
+   {% endcapture %}
+  {% endif %}
+
+  <style>
+    {{ critical }}
+  </style>
 
 <link rel="apple-touch-icon" sizes="180x180" href="{{ site.baseurl }}/apple-touch-icon.png">
 <link rel="icon" type="image/png" href="{{ site.baseurl }}/favicon-32x32.png" sizes="32x32">
