--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -1,10 +1,6 @@
-/*
-   Color and sizing variables
-   ========================================================================== */
+// Variables ================================================================================
 
-// Variables ===================================================================================== /
-
-//Atura colours
+//Main Pallete colours
 
 $eggplant: #9d005a;
 $astronaut: #0e3378;
@@ -12,4 +8,10 @@ $black-pearl: #000c26;
 
 // Variable colours
 
-$base-color: #0e3378;
+$base-color: $black-pearl;
+
+// Fonts
+
+$base-font: 'Source Sans VF',  -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
+
+$header-font: 'Schnyder M Web', Georgia, serif;
