--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -13,12 +13,12 @@ layout: compress
         </h2>
         <p class="tagline">Personal web site</p>
       </div>
-      <!-- <div class="right-line">
+      <div class="right-line">
         <span><svg xmlns="http://www.w3.org/2000/svg" width="20.5" height="16.5" viewBox="0 0 20.5 16.5"><title>border</title><g id="bb6f0286-3b57-4729-92cf-01cdf338769d" data-name="Layer 2"><g id="bbee0e69-b19c-45a2-b3f6-acc7c8473fe9" data-name="Layer 1"><polyline points="20.5 0.5 0.5 0.5 0.5 16.5" fill="none" stroke="#000" stroke-miterlimit="10"/></g></g></svg></span>
         <svg xmlns="http://www.w3.org/2000/svg" width="21.5" height="15.5" viewBox="0 0 21.5 15.5"><title>border-alt</title><g id="b54bc4f3-b422-40c2-9c26-1057e755120b" data-name="Layer 2"><g id="b8ca4cb5-fff5-4d5d-a31d-47311ead5fda" data-name="Layer 1"><polyline points="0.5 0 0.5 15 21.5 15" fill="none" stroke="#000" stroke-miterlimit="10"/></g></g></svg>
       </div>
       <div class="color-block"></div>
-      <div class="border-block"></div> -->
+      <div class="border-block"></div>
     </section>
      <script>
     if ('serviceWorker' in navigator) {
