--- a/_includes/critical/home-page.css
+++ b/_includes/critical/home-page.css
@@ -8,12 +8,16 @@
 }
 
 .site-detail {
+  display: flex;
+  flex-direction: column;
   grid-row: 2;
   grid-column: 3 / 6;
+  justify-content: center;
   z-index: 3;
 }
 
 .logo {
+  color: #9d005a;
   font-family: 'Schnyder M Web', Georgia, serif;
   font-weight: 400;
   font-size: 62px;
@@ -43,7 +47,7 @@
   width: 100%;
   grid-row: 2;
   grid-column: 4 / 5;
-  background-color: $black-pearl;
+  /*background-color: #9d005a;*/
   z-index: 2;
 }
 
@@ -52,7 +56,7 @@
   width: 80%;
   grid-row: 2;
   grid-column: 4 / 5;
-  background-color: $eggplant;
+  /*background-color: #000c26;*/
   z-index: 1;
   position: relative;
   right: -35px;
