--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -21,5 +21,6 @@ layout: compress
       <div class="border-block"></div>
     </section>
     <!-- {% include service-worker.html %} -->
+    {% include analytics/ga.html %}
   </body>
 </html>
