--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -20,7 +20,6 @@ layout: compress
       <div class="color-block"></div>
       <div class="border-block"></div>
     </section>
-    <!-- {% include service-worker.html %} -->
-    {% include analytics/ga.html %}
-  </body>
+    {% include service-worker.html %}
+ </body>
 </html>
