--- a/_sass/_global.scss
+++ b/_sass/_global.scss
@@ -3,6 +3,12 @@
 }
 
 html {
+  background-image: linear-gradient(to bottom, #fde4e0 0%,#fce4e0 9%,#cfd8e1 100%);
+  background-image: linear-gradient(to bottom, #cfd8e1 0%,#fce4e0 91%,#fde4e0 100%);
+  background: linear-gradient(135deg, #cfd8e1 0%,#fce4e0 91%,#fde4e0 100%);
+  background: linear-gradient(45deg, #fde4e0 0%,#fce4e0 9%,#cfd8e1 100%);
+  // https://www.colorzilla.com/gradient-editor/#fde4e0+0,fce4e0+9,cfd8e1+100
+
   height: 100%;
   max-height: 100%;
   -webkit-tap-highlight-color: transparent;
