Fix color variables

--- a/_sass/_pagination.scss
+++ b/_sass/_pagination.scss
@@ -15,7 +15,7 @@
 
     &.current, &:hover {
       background-color: $bg-color;
-      color: $celestial-blue;
+      // color: $celestial-blue;
     }
 
     &.pagination-marker {
