--- a/_sass/_tables.scss
+++ b/_sass/_tables.scss
@@ -53,7 +53,7 @@ tfoot {
 // Filtering
 
 .filter-row {
-  background-color: $celestial-blue;
+  // background-color: $celestial-blue;
   border-radius: 4px 4px 0 0;
 }
 
