--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -15,3 +15,5 @@ $base-color: $black-pearl;
 $base-font: 'Source Sans VF',  -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
 
 $header-font: 'Schnyder M Web', Georgia, serif;
+
+$border-color: #c1c1c1;
