--- a/_sass/_fonts.scss
+++ b/_sass/_fonts.scss
@@ -19,3 +19,19 @@
        url('../fonts/SourceSansVariable-Roman.ttf.woff2') format('truetype');
   font-display: swap;
 }
+
+
+// @font-face {
+//   font-family: 'Inter';
+//   font-weight: 100 900;
+//   font-style: normal;
+//   font-named-instance: 'Regular';
+//   src: url("../fonts/Inter.var.woff2") format("woff2");
+// }
+// @font-face {
+//   font-family: 'Inter';
+//   font-weight: 100 900;
+//   font-style: italic;
+//   font-named-instance: 'Italic';
+//   src: url("../fonts/Inter-italic.var.woff2") format("woff2");
+// }
