--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -4,13 +4,15 @@
 
 $eggplant: #9d005a;
 $astronaut: #0e3378;
-$black-pearl: #000c26;
+$mid-grey: #585e6b;
 
 // Variable colours
 
-$base-color: $black-pearl;
+$base-color: $mid-grey;
 
 // Fonts
+
+$base-font: 'Inter',  -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
 
 $base-font: 'Source Sans VF',  -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
 
