--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,5 +1,5 @@
 ---
-layout: compress
+layout:
 ---
 
   {% include header.html %}
@@ -11,7 +11,12 @@ layout: compress
           <!-- {% include/logo.html %} -->
           justinslack.com
         </h2>
-        <p class="tagline">Personal web site</p>
+        <p class="tagline">Personal web site Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+        cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+        proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
       </div>
       <div class="right-line">
         <span><svg xmlns="http://www.w3.org/2000/svg" width="20.5" height="16.5" viewBox="0 0 20.5 16.5"><title>border</title><g id="bb6f0286-3b57-4729-92cf-01cdf338769d" data-name="Layer 2"><g id="bbee0e69-b19c-45a2-b3f6-acc7c8473fe9" data-name="Layer 1"><polyline points="20.5 0.5 0.5 0.5 0.5 16.5" fill="none" stroke="#000" stroke-miterlimit="10"/></g></g></svg></span>
