--- a/_sass/_global.scss
+++ b/_sass/_global.scss
@@ -9,15 +9,21 @@ html {
   background: linear-gradient(45deg, #fde4e0 0%,#fce4e0 9%,#cfd8e1 100%);
   // https://www.colorzilla.com/gradient-editor/#fde4e0+0,fce4e0+9,cfd8e1+100
 
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+
   height: 100%;
   max-height: 100%;
   -webkit-tap-highlight-color: transparent;
+  scrollbar-color: green;
+  scrollbar-width: thin;
+
+  // @include fluid-type(font-size, $minScreen, $maxScreen, $minFont, $maxFont);
 }
 
 body {
   color: $base-color;
   font-family: $base-font;
-  font-size: 100%;
   font-weight: 400;
   height: 100%;
   letter-spacing: 0.01rem;
@@ -28,3 +34,4 @@ body {
 img {
   max-width: 100%;
 }
+
