--- a/_sass/_typography.scss
+++ b/_sass/_typography.scss
@@ -1,39 +1,73 @@
 ::-moz-selection {
-	background: $black-pearl;
+	background: $mid-grey;
 	color: white;
 }
 
 ::selection {
-	background: $black-pearl;
+	background: $mid-grey;
 	color: white;
 }
 
+
+// --------------------------- Font-Scaling Algorithm ----------------------------
+// For the general strategy: https://www.codementor.io/ricardozea/100-responsive-typography-system-using-a-modular-scale-s5rhft58g
+// Explanation contained herein: https://www.madebymike.com.au/writing/precise-control-responsive-typography/
+
+// -------------
+// Min and max viewport sizes to apply the font scaling
+$min_width: 320;
+$max_width: 1400;
+// --------------
+
+// --------------
+// Range of font size to apply
+$min_font: 13;
+$max_font: 18;
+// --------------
+
+html {
+  font-size: #{$min_font}px;
+}
+
+// Media queries
+// -------------
+
+@media (min-width: #{$min_width}px) and (max-width: #{$max_width}px) {
+  html {
+    font-size: calc(
+      #{$min_font}px + (#{$max_font} - #{$min_font}) *
+        ((100vw - #{$min_width}px) / (#{$max_width} - #{$min_width}))
+    );
+  }
+}
+
+@media (min-width: #{$max_width}px) {
+  html {
+    font-size: #{$max_font}px;
+  }
+}
+
 h1, .h1 {
-  font-size: 3.375em;
   line-height: 1em;
   margin-top: 0.5em;
   margin-bottom: 1em;
 }
 h2, .h2 {
-  font-size: 2.25em;
   line-height: 1.5em;
   margin-top: 0.75em;
   margin-bottom: 0.75em;
 }
 h3, .h3 {
-  font-size: 1.5em;
   line-height: 1.125em;
   margin-top: 1.125em;
   margin-bottom: 0.5em;
 }
 h4, .h4 {
-  font-size: 1em;
   line-height: 1.6875em;
   margin-top: 1.6875em;
   margin-bottom: 0em;
 }
 h5, .h5 {
-  font-size: 1em;
   line-height: 1.6875em;
   margin-top: 1.6875em;
   margin-bottom: 0em;
