Color and copy change

--- a/_includes/critical/home-page.css
+++ b/_includes/critical/home-page.css
@@ -16,7 +16,7 @@
 }
 
 .logo {
-  color: #9d005a;
+  /*color: #9d005a;*/
   font-family: 'Schnyder M Web', Georgia, serif;
   font-weight: 400;
   font-size: 4em;
