--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,7 +4,13 @@
   <meta charset="utf-8">
   <title>{{ page.title }}</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <!-- <link rel="stylesheet" href="{{ site.baseurl }}/css/main.css"> -->
+
+  <meta name="title" content="This is an example of a title.">
+  <meta name="description" content="This is an example of a meta description. This will show up in search results.">
+
+  <link rel="preload" as="font" type="font/woff2" href="" crossorigin>
+  <link rel="preload" as="font" type="font/woff2" href="" crossorigin>
+
   <style type="text/css">
     {% capture include_to_scssify %}
       {% include main.scss %}
