--- a/_sass/_global.scss
+++ b/_sass/_global.scss
@@ -25,10 +25,9 @@ body {
   color: $base-color;
   font-family: $base-font;
   font-weight: 400;
-  height: 2000px;
   letter-spacing: 0.01rem;
   // line-height: $line-height;
-  // max-height: 100%;
+  height: 100vh;
 }
 
 img {
