--- a/_includes/header.html
+++ b/_includes/header.html
@@ -27,7 +27,8 @@
   <link rel="manifest" href="{{ site.baseurl }}/manifest.json">
   <link rel="mask-icon" href="{{ site.baseurl }}/safari-pinned-tab.svg" color="#5bbad5">
   <meta name="theme-color" content="#ffffff">
+  {% feed_meta %}
+  {% seo %}
 
-{% seo %}
 
 </head>
