--- a/_includes/critical/home-page.css
+++ b/_includes/critical/home-page.css
@@ -2,8 +2,8 @@
 
 .main-home {
   display: grid;
-  grid-template-rows: 100px 230px 100px;
-  grid-template-columns: 150px 60px 137px 150px 1fr 1fr 150px;
+  /* grid-template-rows: 100px 230px 100px;
+  grid-template-columns: 150px 60px 137px 150px 1fr 1fr 150px; */
 }
 
 .site-detail {
@@ -18,46 +18,10 @@
 .logo {
   font-family: 'Schnyder M Web', Georgia, serif;
   font-weight: 400;
-  font-size: 5em;
+  font-size: 1em;
   margin: 0;
-  opacity: 0.2;
 }
 
 .tagline {
-  grid-column: 3 / 6;
-  grid-row: 3;
-}
 
-.right-line {
-  grid-row: 2;
-  grid-column: 2;
-  display: flex;
-  justify-content: space-between;
-  flex-direction: column;
-
-  span {
-    display: block;
-  }
-
-}
-
-.color-block {
-  height: 100%;
-  width: 100%;
-  grid-row: 2;
-  grid-column: 4 / 5;
-  /*background-color: #9d005a;*/
-  z-index: 2;
-}
-
-.border-block {
-  height: 80%;
-  width: 80%;
-  grid-row: 2;
-  grid-column: 4 / 5;
-  /*background-color: #000c26;*/
-  z-index: 1;
-  position: relative;
-  right: -35px;
-  top: -5px;
 }
