--- a/_sass/_normalize.scss
+++ b/_sass/_normalize.scss
@@ -1,4 +1,4 @@
-/*! normalize.css v3.0.2 | MIT License | git.io/normalize */
+/* normalize.css v3.0.2 | MIT License | git.io/normalize */
 
 /**
  * 1. Set default font family to sans-serif.
@@ -18,7 +18,6 @@ html {
 body {
   margin: 0;
 }
-
 
 a:active,
 a:hover {
