--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,8 +8,8 @@
   <meta name="title" content="This is an example of a title.">
   <meta name="description" content="This is an example of a meta description. This will show up in search results.">
 
-  <link rel="preload" as="font" type="font/woff2" href="/fonts/SourceSansVariable-Roman.otf.woff2" crossorigin>
-  <link rel="preload" as="font" type="font/woff2" href="/fonts/SchnyderM-Demi-Web.woff2" crossorigin>
+  <link rel="preload" as="font" type="font/woff2" href="/fonts/Inter.var.woff2" crossorigin>
+  <link rel="preload" as="font" type="font/woff2" href="/fonts/Inter-italic.var.woff2" crossorigin>
 
   <style type="text/css">
     {% capture include_to_scssify %}
@@ -37,6 +37,5 @@
   <meta name="theme-color" content="#ffffff">
   {% feed_meta %}
   {% seo %}
-
 
 </head>
