--- a/_sass/_fonts.scss
+++ b/_sass/_fonts.scss
@@ -1,33 +1,31 @@
-@font-face {
-  font-family: 'Schnyder M Web';
-  src: url('../fonts/SchnyderM-Demi-Web.woff2') format('woff2'),
-       url('../fonts/SchnyderM-Demi-Web.woff') format('woff');
-  font-weight:  400;
-  font-style:   normal;
-  font-stretch: normal;
-  font-display: swap;
-}
-
-
-@font-face {
-  font-family: 'Source Sans VF';
-  src: url('../fonts/SourceSansVariable-Roman.otf.woff2') format('woff2-variations');
-  font-display: swap;
-  font-weight: 1 999;
-}
+// @font-face {
+//   font-family: 'Schnyder M Web';
+//   src: url('../fonts/SchnyderM-Demi-Web.woff2') format('woff2'),
+//        url('../fonts/SchnyderM-Demi-Web.woff') format('woff');
+//   font-weight:  400;
+//   font-style:   normal;
+//   font-stretch: normal;
+//   font-display: swap;
+// }
 
 
 // @font-face {
-//   font-family: 'Inter';
-//   font-weight: 100 900;
-//   font-style: normal;
-//   font-named-instance: 'Regular';
-//   src: url("../fonts/Inter.var.woff2") format("woff2");
+//   font-family: 'Source Sans VF';
+//   src: url('../fonts/SourceSansVariable-Roman.otf.woff2') format('woff2-variations');
+//   font-display: swap;
+//   font-weight: 1 999;
 // }
-// @font-face {
-//   font-family: 'Inter';
-//   font-weight: 100 900;
-//   font-style: italic;
-//   font-named-instance: 'Italic';
-//   src: url("../fonts/Inter-italic.var.woff2") format("woff2");
-// }
+
+
+@font-face {
+  font-family: 'Inter';
+  font-weight: 100 900;
+  font-style: normal;
+  src: url("../fonts/Inter.var.woff2") format("woff2-variations");
+}
+@font-face {
+  font-family: 'Inter';
+  font-weight: 100 900;
+  font-style: italic;
+  src: url("../fonts/Inter-italic.var.woff2") format("woff2-variations");
+}
