--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -14,7 +14,7 @@ $base-color: #232435;
 
 $base-font: 'Inter',  -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
 
-$base-font: 'Source Sans VF',  -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
+$base-font: 'Inter',  -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
 
 $header-font: 'Schnyder M Web', Georgia, serif;
 
