--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -5,6 +5,7 @@ layout:
   {% include header.html %}
 
   <body>
+    {% include main-header.html %}
     {{ content }}
     <!-- {% include service-worker.html %} -->
  </body>
