--- a/_sass/_global.scss
+++ b/_sass/_global.scss
@@ -3,15 +3,9 @@
 }
 
 html {
-  // background-image: linear-gradient(to bottom, #fde4e0 0%,#fce4e0 9%,#cfd8e1 100%);
-  // background-image: linear-gradient(to bottom, #cfd8e1 0%,#fce4e0 91%,#fde4e0 100%);
-  // background: linear-gradient(135deg, #cfd8e1 0%,#fce4e0 91%,#fde4e0 100%);
-  background: linear-gradient(45deg, #fde4e0 0%,#fce4e0 9%,#cfd8e1 100%);
-  // // https://www.colorzilla.com/gradient-editor/#fde4e0+0,fce4e0+9,cfd8e1+100
-
+  background: linear-gradient(135deg, #fde4e0 0%,#fce4e0 20%,#cfd8e1 100%);
   background-repeat: no-repeat;
   background-attachment: fixed;
-
   height: 100%;
   max-height: 100%;
   -webkit-tap-highlight-color: transparent;
@@ -24,12 +18,65 @@ body {
   font-family: $base-font;
   font-weight: 400;
   letter-spacing: 0.01rem;
-  // line-height: $line-height;
+  line-height: 1.7;
   height: 100vh;
+}
+
+a {
+  border-bottom: 1px solid $eggplant;
+  color: $eggplant;
+  display: inline-block;
+  font-weight: 550;
+  outline: none;
+  position: relative;
+  text-decoration: none;
+  transition: background-color 0.3s, border-color 0.3s;
+  vertical-align: bottom;
+  white-space: nowrap;
+
+  &:hover {
+    border-color: rgba(52,73,94,0);
+    background-color: rgba(52,73,94,0.1);
+  }
+
 }
 
 img {
   max-width: 100%;
 }
 
+.container {
+  @include rem(max-width, 1170px);
+  margin: 0 auto;
+}
+
+.main-header {
+  align-items: center;
+  display: flex; 
+}
+
+.home-link {
+  display: block;
+  
+  svg {
+    height: 40px;
+    width: 40px;
+  }
+
+}
+
+/* 
+ * Utility class to hide content visually while keeping it screen reader-accessible.
+ * Source: https://www.scottohara.me/blog/2017/04/14/inclusively-hidden.html 
+ */
+
+ .sr-only:not(:focus):not(:active) {
+  clip: rect(0 0 0 0); 
+  clip-path: inset(100%);
+  height: 1px;
+  overflow: hidden;
+  position: absolute;
+  white-space: nowrap; 
+  width: 1px;
+}
 
