Add service worker

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -7,6 +7,6 @@ layout: compress
   <body>
     {% include main-header.html %}
     {{ content }}
-    <!-- {% include service-worker.html %} -->
+    {% include service-worker.html %}
  </body>
 </html>
