--- a/_sass/_fonts.scss
+++ b/_sass/_fonts.scss
@@ -21,6 +21,7 @@
   font-family: 'Inter';
   font-weight: 100 900;
   font-style: normal;
+  font-display: swap;
   src: url("../fonts/Inter.var.woff2") format("woff2-variations");
 }
 @font-face {
