Colour chnage on logo

--- a/_sass/_global.scss
+++ b/_sass/_global.scss
@@ -59,6 +59,7 @@ img {
 .home-link {
   align-items: center;
   border: 1px solid $eggplant;
+  color: $eggplant;
   display: flex;
   font-weight: 250;
   height: 40px;
