--- a/_sass/_global.scss
+++ b/_sass/_global.scss
@@ -61,12 +61,13 @@ img {
   border: 1px solid $eggplant;
   color: $eggplant;
   display: flex;
+  font-size: 1.2em;
   font-weight: 250;
-  height: 40px;
+  height: 60px;
   justify-content: center;
   margin-top: 2rem;
   text-decoration: none;
-  width: 40px;
+  width: 60px;
 }
 
 // .main-nav {
