--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -12,9 +12,7 @@ $base-color: #404d5b;
 
 // Fonts
 
-$base-font: 'Inter',  -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
-
-$base-font: 'Inter',  -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
+$base-font: 'Source',  -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
 
 $header-font: 'Schnyder M Web', Georgia, serif;
 
