--- a/_sass/_fonts.scss
+++ b/_sass/_fonts.scss
@@ -1,13 +1,22 @@
+// @font-face {
+//   font-family: 'Inter';
+//   font-weight: 100 900;
+//   font-style: normal;
+//   font-display: swap;
+//   src: url("../fonts/Inter.var.woff2") format("woff2-variations");
+// }
+// @font-face {
+//   font-family: 'Inter';
+//   font-weight: 100 900;
+//   font-style: italic;
+//   src: url("../fonts/Inter-italic.var.woff2") format("woff2-variations");
+// }
+
+
 @font-face {
-  font-family: 'Inter';
-  font-weight: 100 900;
-  font-style: normal;
-  font-display: swap;
-  src: url("../fonts/Inter.var.woff2") format("woff2-variations");
-}
-@font-face {
-  font-family: 'Inter';
+  font-family: 'Source';
   font-weight: 100 900;
   font-style: italic;
-  src: url("../fonts/Inter-italic.var.woff2") format("woff2-variations");
+  src: url("../fonts/SourceSansVariable-Roman.otf.woff2") format("woff2-variations"),
+       url("../fonts/SourceSansVariable-Roman.ttf.woff2") format("woff2-variations");
 }
