--- a/_sass/_fonts.scss
+++ b/_sass/_fonts.scss
@@ -16,7 +16,7 @@
 @font-face {
   font-family: 'Source';
   font-weight: 100 900;
-  font-style: italic;
+  font-style: normal;
   src: url("../fonts/SourceSansVariable-Roman.otf.woff2") format("woff2-variations"),
        url("../fonts/SourceSansVariable-Roman.ttf.woff2") format("woff2-variations");
 }
