--- a/_sass/_fonts.scss
+++ b/_sass/_fonts.scss
@@ -17,6 +17,7 @@
   font-family: 'Source';
   font-weight: 100 900;
   font-style: normal;
+  font-display: swap;
   src: url("/fonts/SourceSansVariable-Roman.otf.woff2") format("woff2-variations"),
        url("/fonts/SourceSansVariable-Roman.ttf.woff2") format("woff2-variations");
 }
