--- a/_sass/_global.scss
+++ b/_sass/_global.scss
@@ -28,11 +28,12 @@ a:not(.home-link) {
   color: $eggplant;
   display: inline-block;
   font-weight: 550;
+  line-height: 1.4;
   outline: none;
   position: relative;
   text-decoration: none;
   transition: background-color 0.3s, border-color 0.3s;
-  vertical-align: bottom;
+  vertical-align: baseline;
   white-space: nowrap;
 
   &:hover {
