--- a/_includes/header.html
+++ b/_includes/header.html
@@ -24,9 +24,7 @@
     {% endcapture %}
   {% endif %}
 
-  <style>
-    {{ critical }}
-  </style>
+  <style>{{ critical }}</style>
 
 
   <link rel="apple-touch-icon" sizes="180x180" href="{{ site.baseurl }}/apple-touch-icon.png">
