--- a/_layouts/single-page.html
+++ b/_layouts/single-page.html
@@ -1,11 +1,20 @@
-	{% include header.html %}
+---
+layout: compress
+---
 
-	<body>
+{% include header.html %}
+<body></body>
   <div class="site-wrapper">
-  {% include header-nav.html %}
-
-	{{ content }}
+  
+    <main>
+      <div class="container article-container">
+        <article class="article-body" itemscope="" itemtype="http://schema.org/Article">
+          <header class="article-header">
+            <h1 class="single-article-header" itemprop="name headline">{{ page.title }}</h1>
+          </header>
+        {{ content }}
+        </article>
+      </div>
+    </main>
   </div>
-    <script src="{{ site.baseurl }}/scripts/app.min.js"></script>
-	</body>
-</html>
+</body>
