--- a/_sass/_fonts.scss
+++ b/_sass/_fonts.scss
@@ -3,6 +3,5 @@
   font-weight: 100 900;
   font-style: normal;
   font-display: swap;
-  src: url("/fonts/SourceSansVariable-Roman.otf.woff2") format("woff2-variations"),
-       url("/fonts/SourceSansVariable-Roman.ttf.woff2") format("woff2-variations");
+  src: url("/fonts/SourceSansVariable-Roman.ttf.woff2") format("woff2-variations");
 }
