--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="google-site-verification" content="b51Zs_VHq8ALy7PS0Nf5rGQafLOqOU752SIQDojU6ng" />
 
-  <link rel="preload" as="font" type="font/woff2" href="/fonts/SourceSansVariable-Roman.ttf.woff2" crossorigin>
+  <link as="font" type="font/woff2" href="/fonts/SourceSansVariable-Roman.ttf.woff2" crossorigin  rel="preload">
 
   <style type="text/css">
     {% capture include_to_scssify %}
