--- a/_sass/_global.scss
+++ b/_sass/_global.scss
@@ -3,7 +3,9 @@
 }
 
 html {
-  background: linear-gradient(135deg, #fde4e0 0%,#fce4e0 20%,#cfd8e1 100%);
+  // background: linear-gradient(135deg, #fde4e0 0%,#fce4e0 20%,#cfd8e1 100%);
+  background-color: #ffde5a;
+  background-color: #f7e8af;
   background-repeat: no-repeat;
   background-attachment: fixed;
   height: 100%;
