--- a/_sass/_typography.scss
+++ b/_sass/_typography.scss
@@ -53,6 +53,7 @@ h1, .h1 {
   margin-bottom: 1em;
 }
 h2, .h2 {
+  font-family: 'Schnyder M Web', Georgia, serif;
   font-size: 2em;
   line-height: 1.5em;
   margin-top: 0.75em;
