--- a/_sass/_fonts.scss
+++ b/_sass/_fonts.scss
@@ -5,3 +5,11 @@
   font-display: swap;
   src: url("/fonts/SourceSansVariable-Roman.ttf.woff2") format("woff2-variations");
 }
+
+@font-face {
+  font-family: 'Schnyder M Web';
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+  src: url("/fonts/SchnyderM-Demi-Web.woff2") format("woff2");
+}
