--- a/_sass/_typography.scss
+++ b/_sass/_typography.scss
@@ -51,6 +51,7 @@ h1, .h1 {
   line-height: 1em;
   margin-top: 0.5em;
   margin-bottom: 1em;
+  letter-spacing: 0.01em;
 }
 h2, .h2 {
   font-family: 'Schnyder M Web', Georgia, serif;
@@ -58,6 +59,7 @@ h2, .h2 {
   line-height: 1.5em;
   margin-top: 0.75em;
   margin-bottom: 0.75em;
+  letter-spacing: 0.02em;
 }
 h3, .h3 {
   line-height: 1.125em;
