--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -8,11 +8,11 @@ $mid-grey: #1d1e22;
 
 // Variable colours
 
-$base-color: #212132;
+$base-color: #261e2d;
 
 // Fonts
 
-$base-font: 'Source',  -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
+$base-font: Avenir,  -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
 
 $header-font: 'Schnyder M Web', Georgia, serif;
 
