Proload correct font

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -21,7 +21,7 @@
 
   <style>{{ critical }}</style>
 
-  <link as="font" type="font/woff2" href="/fonts/SourceSansVariable-Roman.ttf.woff2" crossorigin rel="preload">
+  <link as="font" type="font/woff2" href="/fonts/SchnyderM-Demi-Web.woff2" crossorigin rel="preload">
 
   <link rel="apple-touch-icon" sizes="180x180" href="{{ site.baseurl }}/apple-touch-icon.png">
   <link rel="icon" type="image/png" href="{{ site.baseurl }}/favicon-32x32.png" sizes="32x32">
