--- a/_includes/assets/css/sass/main.scss
+++ b/_includes/assets/css/sass/main.scss
@@ -1,7 +1,6 @@
-@import "variables";
 @import "mixins";
 @import "normalize";
 @import "utilities";
 @import "typography";
 @import "mobile-menu";
-@import "buttons";
+// @import "buttons";
