--- a/_includes/layouts/radio-shows.njk
+++ b/_includes/layouts/radio-shows.njk
@@ -4,14 +4,14 @@ section: shows
 permalink: /shows/index.html
 ---
 
-<section class="container content--container">
+<section class="container content--container single--page">
   <h1 class="page--title">{{ title }}</h1>
 
   <article class="textual--content">
     {{ layoutContent | safe }}
   </article>
 
-  <div class="grid three--column--grid">
+  <div class="grid three--column--grid list--shows">
   {% set showlist = collections.show %}
   {% include "components/showlist.njk" %}
   </div>
