--- a/_includes/assets/css/sass/_utilities.scss
+++ b/_includes/assets/css/sass/_utilities.scss
@@ -189,7 +189,71 @@
 	max-width: 75ch;
 }
 
+// Shows
+
+.list--shows {
+  padding: 4rem 0;
+}
+
 .show--image {
   margin-block-end: 0;
   max-width: 300px;
+}
+
+.show--card {
+  background-color: white;
+  box-shadow: 0 2px 50px rgba(0,0,0,.19);
+  max-width: 300px;
+  position: relative;
+  transform: skewY(-10deg);
+
+  &::before {
+    background: linear-gradient(25deg, var(--blue) 10%, var(--accent), var(--background) 50%);
+    content: "";
+    height: 4px;
+    left: 0;
+    position: absolute;
+    top: 0;
+    transition: 250ms all ease-in;
+    transform: scale(0);
+    width: 100%;
+    z-index: -1;
+  }
+
+  &:hover {
+    &::before {
+      transform: scale(1);
+    }
+  }
+
+}
+
+.show--card-link {
+  color: var(--blue);
+  padding: 3rem 2rem 1.5rem;
+  text-decoration: none;
+  transform: skewY(10deg);
+}
+
+.show--card-number {
+  color: var(--accent);
+  position: absolute;
+  font-weight: 600;
+  top: -0.5rem;
+  right: 5%;
+}
+
+.show--card-name {
+  font-size: 1.4rem;
+  line-height: 1.5;
+  margin: 0;
+}
+
+.sub--title {
+  display: block;
+  font-weight: 400;
+}
+
+.show--summary {
+  padding-top: 1rem;
 }
