Add link to Other radio

--- a/_includes/assets/css/sass/_utilities.scss
+++ b/_includes/assets/css/sass/_utilities.scss
@@ -153,7 +153,7 @@
 }
 
 .three--column--grid {
-	grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));;
+	grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));;
 	grid-gap: 2rem;
 }
 
@@ -256,4 +256,11 @@
 
 .show--summary {
   padding-top: 1rem;
+}
+
+.next--show {
+  border: 1px dotted grey;
+  max-width: 300px;
+  position: relative;
+  transform: skewY(-10deg);
 }
