--- a/_includes/components/showlist.njk
+++ b/_includes/components/showlist.njk
@@ -1,5 +1,5 @@
 {% for post in showlist | reverse %}
-<div class="flex flex--column show--card">
+<article class="flex flex--column show--card">
 	<a href="{{ post.url | url }}" class="show--card-link">
 		<span class="show--card-number">{{ post.data.number }}</span>
 		<h3 class="show--card-name">
@@ -7,6 +7,6 @@
 			<span class="sub--title">{{ post.data.subtitle }}</span>
 		</h3>
 		<p class="show--summary">{{ post.data.summary }}</p>
-		</a>
-	</div>
+	</a>
+</article>
 {% endfor %}
