--- a/_includes/layouts/radio-shows.njk
+++ b/_includes/layouts/radio-shows.njk
@@ -16,8 +16,11 @@ permalink: /shows/index.html
     {% include "components/showlist.njk" %}
     <article class="next--show">
 		  <div class="next--show-copy">
-        <p>Next show</p>
-		    <time>Date</time>
+        <h3 class="show--card-name">
+          Next show
+			    <span class="sub--title">26 June 2020</span>
+		    </h3>
+        <p class="show--summary">Coming soon</p>
       </div>
     </article>
   </div>
