--- a/_includes/layouts/radio-shows.njk
+++ b/_includes/layouts/radio-shows.njk
@@ -20,7 +20,7 @@ permalink: /shows/index.html
           Next show
 			    <span class="sub--title">26 June 2020</span>
 		    </h3>
-        <p class="show--summary">Coming soon</p>
+        <p class="show--summary">House Nation</p>
       </div>
     </article>
   </div>
