Update: next shows

--- a/_includes/layouts/radio-shows.njk
+++ b/_includes/layouts/radio-shows.njk
@@ -20,7 +20,16 @@ permalink: /shows/index.html
           Next show
 			    <span class="sub--title">26 June 2020</span>
 		    </h3>
-        <p class="show--summary">Atmospheric beats: Masters at Work / Kerri Chandler</p>
+        <p class="show--summary">House Nation</p>
+      </div>
+    </article>
+    <article class="next--show">
+		  <div class="next--show-copy">
+        <h3 class="show--card-name">
+          Next show
+			    <span class="sub--title">24 July 2020</span>
+		    </h3>
+        <p class="show--summary">hEAR</p>
       </div>
     </article>
   </div>
