--- a/_includes/layouts/radio-shows.njk
+++ b/_includes/layouts/radio-shows.njk
@@ -17,7 +17,7 @@ permalink: /shows/index.html
     <article class="next--show">
 		  <div class="next--show-copy">
         <h3 class="show--card-name">
-          Next show
+          Scheduled
 			    <span class="sub--title">26 June 2020</span>
 		    </h3>
         <p class="show--summary">House Nation</p>
@@ -26,7 +26,7 @@ permalink: /shows/index.html
     <article class="next--show">
 		  <div class="next--show-copy">
         <h3 class="show--card-name">
-          Next show
+          Scheduled
 			    <span class="sub--title">24 July 2020</span>
 		    </h3>
         <p class="show--summary">hEAR</p>
